# aionix-mcp

./: .gitignore  Cargo.toml
crates/mcp-types/: generate_mcp_types.py
crates/mcp-types/src/: lib.rs
crates/rmcp-client/: Cargo.toml
crates/rmcp-client/src/: auth_status.rs  find_aionix_home.rs  lib.rs  logging_client_handler.rs  oauth.rs  perform_oauth_login.rs  utils.rs
crates/rmcp-client/tests/: resources.rs
